# schoolflix_backend_dev

./: .env.sample  .gitignore  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: redis_client.py  settings.py
app/core/dependencies/: auth.py
app/middleware/: auth.py
app/models/: index.py  stores.py
app/routes/v1/: __init__.py  campus.py  users.py
app/schema/: campus.py  users.py
app/security/: authentication.py
app/services/: campus.py  users.py
migrations/models/: 0_20251004094334_init.py  0_20251004121956_init.py
